# pageindex-rs

./: .gitignore  Cargo.toml  README.md  long_sample.py
ocr-service/: main.py  pyproject.toml  test_manual.py  test_pdf.py  test_server.py  test_service.py
src/: db.rs  main.rs
