[package]
name = "pageindex-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls", "socks"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
base64 = "0.21"
lopdf = "0.34"
async-recursion = "1.1"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls", "json"] }
uuid = { version = "1.8", features = ["v4", "fast-rng", "macro-diagnostics"] }
sha2 = "0.10"
pdfium-render = "0.8.37"
image = "0.25.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
